--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,12 @@
 .blog-preview a {
   text-decoration: none;
 }
+
+.blog-details button {
+  background: #f1356d;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
